# Terry

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
Octarine-CLI/: CMakeLists.txt  README.md
Octarine-CLI/include/: animations.h  cell_buffer.h  config.h  shell_host.h  vt_parser.h
Octarine-CLI/src/: animations.cpp  boot_sequence.cpp  config.cpp  main.cpp  particle_system.cpp  tui_app.cpp  vt_parser.cpp
assets/: terry.rc  terry.rc.in
include/: animations.h  background_art.h  boot_sequence.h  particle_system.h  skill_registry.h  theme.h  tui_app.h  vscode_launcher.h
scripts/: embed_skills.cmake
src/: animations.cpp  background_art.cpp  boot_sequence.cpp  cell_buffer.cpp  particle_system.cpp  shell_host_posix.cpp  shell_host_windows.cpp  skill_registry.cpp  tui_app.cpp  vscode_launcher.cpp
